fix broken css comment, reenable caching

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -2,53 +2,55 @@
   outline: 1px solid red !important;
 }*/
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -box-sizing: border-box;
 }
 
 body {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  background: black;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    background: black;
 }
 
 input {
-  background: grey;
-  font-size: 18px;
+    background: grey;
+    font-size: 18px;
 }
 
 form {
-  display: inline-block;
+    display: inline-block;
 }
 
 .centered {
-  text-align: center;
+    text-align: center;
 }
 
 #pizzaSize {
-  font-weight: 800;
+    font-weight: 800;
 }
 
-//**add backface-vis to enhance gpu usage */
+/**add backface-vis to enhance gpu usage */
 .mover {
-  position: fixed;
-  width: 256px;
-  z-index: -1;
-  backface-visibility: hidden;
+    position: fixed;
+    width: 256px;
+    z-index: -1;
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 
 .randomPizzaContainer {
-  float: left;
-  display: flex;
+    float: left;
+    display: flex;
 }
 
-.randomPizzaContainer:after {
-  content: "";
-  display: table;
-  clear:both;
-}
+    .randomPizzaContainer:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 
- .container {
-  background-color: rgba(240, 60, 60, 0.8);
+.container {
+    background-color: rgba(240, 60, 60, 0.8);
 }
